--- a/views/productos/listaProductosCRD.html
+++ b/views/productos/listaProductosCRD.html
@@ -1,7 +1,7 @@
 <!-- Content Header (Page header) -->
 <section class="content-header">
   <h1>
-    Lista de Productos
+    Listado de Productos
   </h1>  
   <ol class="breadcrumb">
     <li><a href="#/"><i class="fa fa-home"></i> Inicio</a></li>
