--- a/views/ventas/clientesU.html
+++ b/views/ventas/clientesU.html
@@ -22,26 +22,26 @@
           </div>
       </div>
       <div class="form-group has-feedback" ng-class="{'has-error': form.name.$invalid, 'has-success': form.name.$valid}">           
-          <input id="inputname" type="text" placeholder="Nombre"  class="form-control" name="name" ng-model="clientes.name" required>                               
+          <input id="inputname" type="text" placeholder="Nombre"  class="form-control" name="name" ng-model="clientes.nombre" required>                               
           <div ng-show="form.name.$dirty && form.name.$invalid">
             <p class="help-block text-danger" ng-show="form.name.$error.required">Campo obligatorio</p>
           </div>
       </div>      
       <div class="form-group has-feedback" ng-class="{'has-error': form.email.$invalid, 'has-success': form.email.$valid}">           
-          <input id="inputEmail" type="email" placeholder="E-mail"  class="form-control" name="email" ng-model="clientes.email" required>                                 
+          <input id="inputEmail" type="email" placeholder="E-mail"  class="form-control" name="email" ng-model="clientes.correo" required>                                 
           <div ng-show="form.email.$dirty && form.email.$invalid">
             <p class="help-block text-danger" ng-show="form.email.$error.required">Campo obligatorio</p>
             <p class="help-block text-danger" ng-show="form.email.$error.email">Email invalido</p>
           </div>
       </div>
       <div class="form-group has-feedback" ng-class="{'has-error': form.address.$invalid, 'has-success': form.address.$valid}">           
-          <input id="inputaddress" type="text" placeholder="Dirección"  class="form-control" name="address" ng-model="clientes.address" required>                               
+          <input id="inputaddress" type="text" placeholder="Dirección"  class="form-control" name="address" ng-model="clientes.direccion" required>                               
           <div ng-show="form.address.$dirty && form.address.$invalid">
             <p class="help-block text-danger" ng-show="form.address.$error.required">Campo obligatorio</p>
           </div>
       </div>
       <div class="form-group has-feedback" ng-class="{'has-error': form.phone.$invalid, 'has-success': form.phone.$valid}">           
-          <input id="inputphone" type="text" placeholder="Teléfono"  class="form-control" name="phone" ng-model="clientes.phone" required>                               
+          <input id="inputphone" type="text" placeholder="Teléfono"  class="form-control" name="phone" ng-model="clientes.telefono" required>                               
           <div ng-show="form.phone.$dirty && form.phone.$invalid">
             <p class="help-block text-danger" ng-show="form.phone.$error.required">Campo obligatorio</p>
           </div>
